--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "url": "git+https://github.com/ipincamp/whatsapp-client.git"
   },
   "dependencies": {
+    "express": "^4.17.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.15.6"
   },
