--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.15.6"
+    "whatsapp-web.js": "^1.15.6",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
