Update some value

--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,6 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
-config.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -104,3 +103,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Session saved
+session.json
