--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "url": "git+https://github.com/ipincamp/whatsapp-client.git"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "express": "^4.17.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.15.6",
