Debug with nodemon :D

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "homepage": "https://github.com/ipincamp/whatsapp-client#readme",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon .",
     "lint": "eslint --fix --ext .js .",
     "start": "node .",
     "test": "echo \"Tests have been done before being pushed to version control\" && exit 0"
@@ -40,6 +41,7 @@
   "devDependencies": {
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "nodemon": "^2.0.15"
   }
 }
